# PrimerForge

./: .flake8  .gitignore  BIORXIV_MANUSCRIPT.md  HOW_TO_USE_GUIDE.md  README.md  SCIENTIFIC_METHODOLOGY.md  SUPPLEMENTARY.md  benchmark.py  benchmark_external.py  benchmark_rigorous.py  benchmark_sota.py  cluster_split.py  collect_artic_schemes.py  collect_primerbank.py  collect_rtprimerdb.py  data_collection_checklist.md  data_collection_checklist.py  dataset_audit.py  ewc_ablation.py  fine_tune.py  generate_negatives.py  label_standard.md  make_publication_package.py  master_schema.md  merge_and_deduplicate.py  publication_outline.md  pyproject.toml  scrape_origene.py  web_server.py
data/: X_test.npy  X_train.npy  ablation_results.csv  artic_v4_primers.csv  benchmark_details.csv  benchmark_summary.csv  dataset_audit_report.md  lab_validation_primers.csv  live_ultra_empirical_db.csv  master_training_db.csv  primerbank_full.csv  primerbank_real.csv  primerforge_empirical_db.csv  real_empirical_db.csv  retrospective_validation_results.csv  rigorous_benchmarks.csv  rtprimerdb.csv  rtprimerdb_real.csv  sample_lab_data.csv  ultra_empirical_db.csv  y_test.npy  y_train.npy
manuscript/: abstract.md  figure_captions.md  methods_section.md  submission_checklist.md
models/: X_test.npy  X_train.npy  dna_transformer_pretrained.json  live_ultra_empirical_db.csv  primerbank_real.csv  primerforge_lightgbm.model  primerforge_lightgbm_ultra_0.model  primerforge_lightgbm_ultra_1.model  primerforge_lightgbm_ultra_2.model  primerforge_lightgbm_ultra_3.model  primerforge_lightgbm_ultra_4.model  primerforge_lightgbm_ultra_calib.json  y_test.npy  y_train.npy
plots/: benchmark_results_table.md
primerforge/: __init__.py  active_learning.py  benchmark.py  biophysics.py  cli.py  continual_learner.py  data_curation.py  gnn_biophysics.py  ml_scorer.py  multiplex.py  multitask_amp.py  optimizer.py  secondary_structure.py  specificity.py  transformer.py  utils.py  validation.py
publication_package/: BIORXIV_MANUSCRIPT.tex  manifest.json  reproducibility_report.md
scratch/: add_guards.py  build_master_db.py  check_names.py  debug_mlm_grad.py  debug_primerbank_html.py  fetch_artic.py  fetch_primerbank.py  fetch_rtprimerdb.py  replace_names.py  (+11 more)
(+48 files in other folders)
