[tool.poetry]
name = "primerforge-py"
version = "0.2.0"
description = "A Hybrid Thermodynamic and Machine Learning Platform for Pangenome-Aware PCR Primer Design"
authors = ["PrimerForge Contributors <support@primerforge.org>"]
readme = "README.md"
license = "MIT"
packages = [{include = "primerforge"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">=1.24.0"
primer3-py = "^2.0.1"
# mappy requires a C compiler and zlib. Enabled for Linux CI; optional on Windows.
mappy = {version = "^2.26", optional = true}
lightgbm = "^4.3.0"
pulp = "^2.8.0"
click = "^8.1.7"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
streamlit = "^1.32.0"
pandas = "^2.2.1"
matplotlib = "^3.8.3"

[tool.poetry.extras]
mappy = ["mappy"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
black = "^24.2.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
shap = "^0.45.0"

[tool.poetry.scripts]
primerforge = "primerforge.cli:main"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
warn_return_any = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
